--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 	<h1>MingSong</h1>
 	<p>I am Programmer.</p>
-	<a href="contact.html"></a>
+	<a href="contact.html">contact</a>
 </body>
 </html>
